Add extra deploy steps back in - looks like they might be needed

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,4 +98,12 @@ jobs:
       - deploy:
           name: Deploy API
           command: |
+            export PATH=$HOME/bin:$PATH
+            export NVM_DIR="$HOME/.nvm"
+            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
+            [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"  # This loads nvm bash_completion
+            . venv/bin/activate
+            nvm use default
+            npm run build
+            pip install -r requirements.txt
             invoke deploy --branch $CIRCLE_BRANCH --login True --yes
