--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,8 +30,8 @@ jobs:
           # Commands listed here are from the CircleCI PostgreSQL config docs:
           # https://circleci.com/docs/2.0/postgres-config/#postgresql-circleci-configuration-example
           command: |
-            apt-get update -qq && apt-get install -y build-essential postgresql-client
-            echo ‘/usr/lib/postgresql/9.6/bin/:$PATH’ >> $BASH_ENV
+            sudo apt-get update -qq && sudo apt-get install -y build-essential postgresql-client
+            echo '/usr/lib/postgresql/9.6/bin/:$PATH' >> $BASH_ENV
 
       - restore_cache:
           keys:
