--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,13 +57,13 @@ jobs:
       - run:
           name: Install Python dependencies
           command: |
-            python3 -m venv venv
-            . venv/bin/activate
+            python3 -m venv env
+            . env/bin/activate
             pip install -r requirements.txt -r requirements-dev.txt -r requirements-ci.txt
 
       - save_cache:
           paths:
-            - ./venv
+            - ./env
             - ./node_modules
           key: fec-api-dependencies-{{ checksum "requirements.txt" }}-{{ checksum "requirements-dev.txt" }}-{{ checksum "requirements-ci.txt" }}-{{ checksum "package.json" }}
 
@@ -74,13 +74,13 @@ jobs:
       - run:
           name: Run tests
           command: |
-            . venv/bin/activate
+            . env/bin/activate
             py.test
 
       - run:
           name: Perform post-test checks
           command: |
-            . venv/bin/activate
+            . env/bin/activate
             codecov
 
       - store_artifacts:
@@ -102,6 +102,6 @@ jobs:
             export NVM_DIR="$HOME/.nvm"
             [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
             [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"  # This loads nvm bash_completion
-            . venv/bin/activate
+            . env/bin/activate
             nvm use default
             invoke deploy --branch $CIRCLE_BRANCH --login True --yes
